build tweaks for IDEA